# chatboto

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: fetch.rs  gemini.rs  main.rs  mistral.rs  models.rs  services.rs  state.rs  styles.rs  types.rs
src/components/: button.rs  input_form.rs  markdown.rs  message_area.rs  mod.rs  nav_bar.rs  text_input.rs
src/screens/: chat_screen.rs  mod.rs  setting_screen.rs
src/utils/: fetch.rs  gemini.rs  mistral.rs  mod.rs
src/widgets/: input_form.rs  message_area.rs  mod.rs  nav.rs  text_area.rs
