[package]
name = "chatboto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
iced = "0.13.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.10", features = ["json", "blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
