[package]
name = "chatboto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
iced = "0.13.1"
reqwest = { version = "0.12.10", features = ["json", "blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

sqlx = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
rusql-alchemy = "0.5.0-rc.6"
