[package]
name = "chatboto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["async-std"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
rusql-alchemy = "0.5.0-rc.6"
